--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
-    "commander": "^11.1.0"
+    "commander": "^11.1.0",
+    "nanoid": "^5.0.4"
   }
 }
